--- a/WebPortal/src/main/resources/Templates/css/what_we_do.css
+++ b/WebPortal/src/main/resources/Templates/css/what_we_do.css
@@ -61,7 +61,12 @@ footer{
 #contenedor{
     display: flex;
     justify-content: space-around;
-    background-color: #222;
+    background: url("https://images.unsplash.com/photo-1465146633011-14f8e0781093?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3450&q=80");
+    color: #eee;
+    align-items: center;
+    perspective: 1000px;
+    perspective-origin: 50% 50%;
+    animation: animation 100s linear infinite;
     
 }
 
@@ -94,4 +99,23 @@ footer{
     border-top:1px solid #FFF;
     border-bottom:px solid #FFF;
     
+}
+
+.wrapper {
+    background: url("https://images.unsplash.com/photo-1465146633011-14f8e0781093?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3450&q=80");
+    color: #eee;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    perspective: 1000px;
+    perspective-origin: 50% 50%;
+    animation: animation 100s linear infinite;
+}
+
+@keyframes animation {
+    100%{
+        background-position:0px -3000px;
+    }
 }
