--- a/WebPortal/src/main/resources/Templates/what_we_do.html
+++ b/WebPortal/src/main/resources/Templates/what_we_do.html
@@ -54,21 +54,21 @@
           </h1>
         </div>
           <form id="paper" method="get" action="">
-              <p readonly placeholder="Enter something funny." id="text" name="text" rows="4" style="overflow: scroll; word-wrap: break-word; resize: none; height: 95vh; width: 70vw; scroll-behavior: auto;">We as students take care of making a web page collecting data of the official page of statsbomb respecting all the rights of said company. We have collected all possible match filters provided by statsbomb. We have the following filters to consult on our website: <br> <br> 
-                <b>+ Percentage of Possession:</b> In this endpoint you must enter the id of the match and it will return the percentage of possession of the match. <br> <br>
+              <p readonly placeholder="Enter something funny." id="text" name="text" rows="4" style="overflow: scroll; word-wrap: break-word; resize: none; height: 95vh; width: 70vw; scroll-behavior: auto;">We as students take care of making a web page collecting data of the official page of Statsbomb respecting all the rights of said company. We have collected all possible match filters provided by Statsbomb. We have the following filters to consult on our website: <br> <br>
+                <b>+ Percentage of Possession:</b> In this endpoint you must enter the id of the match, so it will return the percentage of possession of the match. <br> <br>
                 <b>+ Matches Date:</b> In this endpoint you must enter the id of the competition, the id of the season and the date from which you want to list all the matches. <br> <br>
-                <b>+ Matches Date:</b> This endpoint is in charge of listing all the points of the manager indicated in the parameter. <br> <br>
-                <b>+ Manager with same Nationality:</b> Endpoint in charge of listing all managers with the same nationality. <br> <br>
-                <b>+ Goalkeepers:</b> Endpoint in charge of listing the goalkeepers who use their hands the most in the selected match. <br> <br>
-                <b>+ Duels:</b> Endpoint in charge of listing the best player of each team that wins the most duels. <br> <br>
-                <b>+ Scorers:</b> Endpoint in charge of listing all the people who score a goal in the match stopped by the match id parameter. <br> <br>
-                <b>+ Posession:</b> Endpoint in charge of listing the percentage of possession of each team in each half, including overtime. <br> <br>
-                <b>+ Reference Player:</b> In charge of showing the best valued player of the match. <br> <br>
-                <b>+ Order Three Sixty:</b> Endpoint that orders the three sixty by match id. <br> <br>
-                <b>+ Teammates Three Sixty:</b> Endpoint in charge of listing all the players that appear on the camera in real time at that moment. <br> <br>
-                <b>+ Order Competitions Ascent:</b> Endpoint in charge of ordering the competitions in ascending order. <br> <br>
-                <b>+ Female Competitions:</b> Endpoint in charge of listing all women's competitions. <br> <br>
-                <b>+ Male Competitions:</b> Endpoint in charge of listing all male competitions. <br> <br>
+                <b>+ Matches Date:</b> This endpoint is responsible for listing all the points of the manager indicated in the parameter. <br> <br>
+                <b>+ Manager with same Nationality:</b> Endpoint is responsible for listing all managers with the same nationality. <br> <br>
+                <b>+ Goalkeepers:</b> This Endpoint is responsible for listing the goalkeepers who use their hands the most in the selected match. <br> <br>
+                <b>+ Duels:</b> This Endpoint is responsible for listing the best player of each team that wins the most duels. <br> <br>
+                <b>+ Scorers:</b> This Endpoint is responsible for listing all the people who score a goal in the match stopped by the match id parameter. <br> <br>
+                <b>+ Possession:</b> This Endpoint is responsible for listing the percentage of possession of each team in each half, including overtime. <br> <br>
+                <b>+ Reference Player:</b> Is responsible for showing the best valued player of the match. <br> <br>
+                <b>+ Order Three Sixty:</b> This Endpoint that orders the three sixty by match id. <br> <br>
+                <b>+ Teammates Three Sixty:</b> This Endpoint is responsible for listing all the players that appear on the camera in real time at that moment. <br> <br>
+                <b>+ Order Competitions Ascent:</b> This Endpoint is responsible for ordering the competitions in ascending order. <br> <br>
+                <b>+ Female Competitions:</b> This Endpoint is responsible for listing all women's competitions. <br> <br>
+                <b>+ Male Competitions:</b> This Endpoint is responsible for listing all male competitions. <br> <br>
               </p>
           </form>
       </div>
@@ -91,7 +91,7 @@
       <div id="listaIconos">
         <div class="col-md-4 d-flex align-items-center">
           <a class="text-muted m-2" href="https://statsbomb.com/es/" target="_blank"><img class="bi" width="24" height="24" src="img/statsbomb_negro.svg"></img></a>
-          <span class="mb-3 mb-md-0 text-muted">2023 2DAM, Fuente de datos obtenida en la pagina oficial de <a href="https://github.com/statsbomb/open-data" target="_blank">StatsBomb</a>.</span>
+          <span class="mb-3 mb-md-0 text-muted">2023 2DAM, Data source obtained on the official page of <a href="https://github.com/statsbomb/open-data" target="_blank">StatsBomb</a>.</span>
         </div>
     
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
