--- a/WebPortal/src/main/resources/Templates/statistics.html
+++ b/WebPortal/src/main/resources/Templates/statistics.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>StatsBomb</title>
-    <link href="CSS/header.css" rel="stylesheet" >
+    <link href="css/statistics.css" rel="stylesheet" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+    <script th:src="@{/js/fillComboBoxEndPoint.js}"></script>
     <header class="py-3 mb-3 border-bottom">
         <div class="he">
             <div >
@@ -70,11 +70,8 @@
           <h2 class="blanco">Available Statistics</h2>
            
           <div class="select">
-            <select name="slct" id="slct">
+            <select name="slct" id="endpoints">
               <option>Choose an option</option>
-              <option value="1">Pure CSS</option>
-              <option value="2">No JS</option>
-              <option value="3">Nice!</option>
             </select>
           </div>
                              
