change name of directory "Templates" in /resources, to "templates" and chage id duplicate in statistics.html, another change in application.yaml, change port to 8080

--- a/WebPortal/src/main/resources/templates/statistics.html
+++ b/WebPortal/src/main/resources/templates/statistics.html
@@ -46,7 +46,7 @@
           <h2 class="blanco">Competitions</h2>
           
           <div class="select">
-            <select name="slct" id="slct">
+            <select name="slct" id="selectCompetitions">
               <option>Choose an option</option>
               <option value="1">UEFA Europa League</option>
               <option value="2">UEFA Champions League</option>
@@ -60,7 +60,7 @@
        
  
           <div class="select">
-            <select name="slct" id="slct">
+            <select name="slct" id="selectMatches">
               <option>Choose an option</option>
               <option value="1">Pure CSS</option>
               <option value="2">No JS</option>
