--- a/WebPortal/src/main/resources/templates/statistics.html
+++ b/WebPortal/src/main/resources/templates/statistics.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>StatsBomb</title>
+    <link rel="icon" href="img/statsbomb_positive.svg">
     <link href="css/statistics.css" rel="stylesheet" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
@@ -11,35 +12,44 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script th:src="@{/js/fillComboBoxEndPoint.js}"></script>
     <header class="py-3 mb-3 border-bottom">
-        <div class="he">
-            <div >
-                <div class="nombreDAMBOMB" >
-                  <a href="https://statsbomb.com/es/" target="_blank">
-                    <img class="" src="IMG/statsbomb.svg" width="40" height="32" alt="My Happy SVG" />
-                  </a>
-                  <h4 class="titulo" id="textoTitulo">StatsBomb</h4>
-                </div>
-            </div>
-            
-    
-            <div class="botonesHeader">
-                <button type="button" class="btn btn-outline-light">¿Quienes somos?</button>
-                <button type="button" class="btn btn-outline-light">¿Que hacemos?</button>
-            </div>
-            
-            <div id="botonLog" class="dropdown ">
-                <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                  <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
-                </a>
-                <ul class="dropdown-menu text-small shadow">
-                  <li><a class="dropdown-item" href="#">New project...</a></li>
-                  <li><a class="dropdown-item" href="#">Settings</a></li>
-                  <li><a class="dropdown-item" href="#">Profile</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Sign out</a></li>
-                </ul>
-              </div>
+      <div class="he">
+        <div >
+          <div class="nombreDAMBOMB" >
+            <a href="https://statsbomb.com/es/" target="_blank">
+              <img class="" src="IMG/statsbomb.svg" width="40" height="32" alt="My Happy SVG" />
+            </a>
+            <a th:href="@{/index}" style="outline: none; text-decoration: none; color: white;">
+              <h4 class="titulo" id="textoTitulo">StatsBomb</h4>
+            </a>
+          </div>
         </div>
+
+
+        <div class="botonesHeader">
+          <a th:href="@{/about_us}">
+            <button type="button" class="btn btn-outline-light">About us</button>
+          </a>
+          <a th:href="@{/what_we_do}">
+            <button type="button" class="btn btn-outline-light">What We Do</button>
+          </a>
+          <a th:href="@{/statistics}">
+            <button type="button" class="btn btn-outline-light">Statistics</button>
+          </a>
+        </div>
+            
+        <div id="botonLog" class="dropdown ">
+          <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+          </a>
+          <ul class="dropdown-menu text-small shadow">
+            <li><a class="dropdown-item" href="#">New project...</a></li>
+            <li><a class="dropdown-item" href="#">Settings</a></li>
+            <li><a class="dropdown-item" href="#">Profile</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Sign out</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
       <div id="contenedor">
         <div id="filtro"> 
@@ -60,6 +70,7 @@
        
  
           <div class="select">
+            <label for="selectMatches">Matches</label>
             <select name="slct" id="selectMatches">
               <option>Choose an option</option>
               <option value="1">Pure CSS</option>
