--- a/WebPortal/src/main/resources/templates/what_we_do.html
+++ b/WebPortal/src/main/resources/templates/what_we_do.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>StatsBomb</title>
-    <link  rel="icon"   href="img/statsbomb_positive.svg">
+    <link rel="icon" href="img/statsbomb_positive.svg">
     <link href="css/what_we_do.css" rel="stylesheet" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
@@ -18,15 +18,24 @@
                   <a href="https://statsbomb.com/es/" target="_blank">
                     <img class="" src="img/statsbomb.svg" width="40" height="32" alt="My Happy SVG" />
                   </a>
-                  <h4 class="titulo" id="textoTitulo">StatsBomb</h4>
+                  <a th:href="@{/index}" style="outline: none; text-decoration: none; color: white;">
+                    <h4 class="titulo" id="textoTitulo">StatsBomb</h4>
+                  </a>
                 </div>
             </div>
-            
-    
-            <div class="botonesHeader">
-                <button type="button" class="btn btn-outline-light">About us</button>
-                <a href="what_we_do.html"><button type="button" class="btn btn-outline-light">What We Do</button></a>
-            </div>
+
+
+          <div class="botonesHeader">
+            <a th:href="@{/about_us}">
+              <button type="button" class="btn btn-outline-light">About us</button>
+            </a>
+            <a th:href="@{/what_we_do}">
+              <button type="button" class="btn btn-outline-light">What We Do</button>
+            </a>
+            <a th:href="@{/statistics}">
+              <button type="button" class="btn btn-outline-light">Statistics</button>
+            </a>
+          </div>
             
             <div id="botonLog" class="dropdown ">
                 <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
