--- a/WebPortal/src/main/resources/templates/statistics.html
+++ b/WebPortal/src/main/resources/templates/statistics.html
@@ -10,7 +10,6 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script th:src="@{/js/fillComboBoxEndPoint.js}"></script>
     <header class="py-3 mb-3 border-bottom">
       <div class="he">
         <div >
@@ -57,11 +56,6 @@
           
           <div class="select">
             <select name="slct" id="selectCompetitions">
-              <option>Choose an option</option>
-              <option value="1">UEFA Europa League</option>
-              <option value="2">UEFA Champions League</option>
-              <option value="3">La Liga</option>
-              <option value="4">La </option>
             </select>
           </div>
                  
@@ -96,7 +90,8 @@
           </form>
         </div>
       </div>
-      
+
+    <script type="module" src="js/fillComboBoxEndPoint.js"></script>
 
     <footer>
       <hr>
