web completed with supplied endpoints and resources

--- a/WebPortal/src/main/resources/templates/statistics.html
+++ b/WebPortal/src/main/resources/templates/statistics.html
@@ -69,6 +69,10 @@
 
 
           <h2 class="blanco"><label for="endpoints">Available Statistics</label></h2>
+
+          <div id="camposOpcionales">
+
+          </div>
            
           <div class="select">
             <select name="slct" id="endpoints">
