--- a/WebPortal/src/main/resources/templates/index.html
+++ b/WebPortal/src/main/resources/templates/index.html
@@ -55,7 +55,7 @@
 
 
   <div id="contenerdorVideo">
-    <video src="IMG/IMG_5627.mp4" autoplay="true" muted="true" loop="true"></video>
+    <video th:src="@{/img/IMG_5627.mp4}" autoplay="true" muted="true" loop="true"></video>
   </div>
 
   <div id="frase"><h2>Nunca dudes que un pequeño grupo de personas comprometidas pueda cambiar el mundo. </br> <a id="secreto" href="secreto.html" target="_blank">De hecho,</a> es lo único que lo ha logrado </h2></div>
