--- a/WebPortal/src/main/resources/templates/index.html
+++ b/WebPortal/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns:th="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,7 +43,9 @@
                   <img th:src="@{/img/guest.jpg}" alt="mdo" width="32" height="32" class="rounded-circle">
                 </a>
                 <ul class="dropdown-menu text-small shadow">
-                  <li><a class="dropdown-item" href="#">Profile</a></li>
+                  <li><a class="dropdown-item" th:utext="${userName}"></a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" th:href="@{/statistics_available}">Availible</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" th:href="@{/logout}">Sign out</a></li>
                 </ul>
