--- a/WebPortal/src/main/resources/templates/what_we_do.html
+++ b/WebPortal/src/main/resources/templates/what_we_do.html
@@ -42,7 +42,7 @@
                   <img th:src="@{/img/guest.jpg}" alt="mdo" width="32" height="32" class="rounded-circle">
                 </a>
                 <ul class="dropdown-menu text-small shadow">
-                  <li><a class="dropdown-item" href="#">Profile</a></li>
+                  <li><a class="dropdown-item" th:utext="${userName}"></a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" th:href="@{/logout}">Sign out</a></li>
                 </ul>
