updated statistics availibles to about_us, statistics, what_we_do

--- a/WebPortal/src/main/resources/templates/what_we_do.html
+++ b/WebPortal/src/main/resources/templates/what_we_do.html
@@ -44,14 +44,13 @@
                 <ul class="dropdown-menu text-small shadow">
                   <li><a class="dropdown-item" th:utext="${userName}"></a></li>
                   <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" th:href="@{/statistics_available}">Availible</a></li>
+                  <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" th:href="@{/logout}">Sign out</a></li>
                 </ul>
               </div>
         </div>
     </header>
-
-
-
 
     <div id="contenedor">
       <div id="resultado">
