--- a/WebPortal/src/main/resources/templates/about_us.html
+++ b/WebPortal/src/main/resources/templates/about_us.html
@@ -45,6 +45,8 @@
           <ul class="dropdown-menu text-small shadow">
             <li><a class="dropdown-item" th:utext="${userName}"></a></li>
             <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" th:href="@{/statistics_available}">Availible</a></li>
+            <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" th:href="@{/logout}">Sign out</a></li>
           </ul>
         </div>
